quick first draft of Java 11 support